@@ -11,12 +11,31 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <compiler.plugin.version>3.6.0</compiler.plugin.version>
         <java.version>1.8</java.version>
         <spring.version>3.2.16.RELEASE</spring.version>
         <findbugs.version>3.0.1</findbugs.version>
+        <surefire.plugin.version>2.20</surefire.plugin.version>
+        <allure.version>2.0-BETA6</allure.version>
+        <aspectj.version>1.8.10</aspectj.version>
+        <allure.results.directory>
+            ${project.build.directory}/allure-results
+        </allure.results.directory>
+        <tms>
+            https://github.com/allure-framework/allure-docs/issues/{}
+        </tms>
+        <issues.tracker>
+            https://github.com/allure-framework/allure-docs/issues/{}
+        </issues.tracker>
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-testng</artifactId>
+            <version>${allure.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
@@ -84,13 +103,56 @@
             <plugins>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.19.1</version>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>${compiler.plugin.version}</version>
                     <configuration>
-                        <suiteXmlFiles>
-                            <suiteXmlFile>testng.xml</suiteXmlFile>
-                        </suiteXmlFiles>
+                        <source>${java.version}</source>
+                        <target>${java.version}</target>
                     </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>${surefire.plugin.version}</version>
+                    <configuration>
+                        <forkCount>1</forkCount>
+                        <argLine>-Xmx2048m -XX:MaxPermSize=256m</argLine>
+                        <properties>
+                            <property>
+                                <name>usedefaultlisteners</name>
+                                <value>false</value>
+                            </property>
+                        </properties>
+                        <systemProperties>
+                            <property>
+                                <name>allure.results.directory</name>
+                                <value>${allure.results.directory}</value>
+                            </property>
+                            <property>
+                                <name>allure.link.issue.pattern</name>
+                                <value>${issues.tracker}</value>
+                            </property>
+                            <property>
+                                <name>allure.link.tms.pattern</name>
+                                <value>${tms}</value>
+                            </property>
+                        </systemProperties>
+                        <suiteXmlFiles>
+                            <suiteXmlFile>
+                                ${suite}
+                            </suiteXmlFile>
+                        </suiteXmlFiles>
+                        <argLine>
+                            -javaagent:${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar
+                        </argLine>
+                    </configuration>
+                    <dependencies>
+                        <dependency>
+                            <groupId>org.aspectj</groupId>
+                            <artifactId>aspectjweaver</artifactId>
+                            <version>${aspectj.version}</version>
+                        </dependency>
+                    </dependencies>
                 </plugin>
             </plugins>
         </pluginManagement>
